objects/Monthly_Attendence__c.object
<CustomObject>
    <label>Monthly Attendence</label>
    <nameField>
        <displayFormat>Emp-Att-ID {0000}</displayFormat>
        <label>Monthly Attendence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Attendences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Hours__c</fullName>
        <description>Calculate the Sum of Daily Hours.</description>
        <label>Hours</label>
        <summarizedField>Daily_Attendence__c.Daily_Hours__c</summarizedField>
        <summaryForeignKey>Daily_Attendence__c.Monthly_Attendence_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <description>Calculate the Sum of Daily Minutes.</description>
        <label>Minutes</label>
        <summarizedField>Daily_Attendence__c.Daily_Minutes__c</summarizedField>
        <summaryForeignKey>Daily_Attendence__c.Monthly_Attendence_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <label>Total Days</label>
        <summaryForeignKey>Daily_Attendence__c.Monthly_Attendence_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <description>Calculate the sum of hours and minutes.</description>
        <formula>IF( MOD(Minutes__c,60)&gt;= 30, Hours__c +CEILING(Minutes__c /60), 
Hours__c + FLOOR(Minutes__c /60) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>K_Employee__c</referenceTo>
        <relationshipLabel>Monthly Attendences</relationshipLabel>
        <relationshipName>Monthly_Attendences</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>